--- a/category.html
+++ b/category.html
@@ -20,12 +20,12 @@
                 <hr>
                 <ul class="nav nav-pills flex-column mb-auto">
                     <li class="nav-item">
-                        <a href="home.html" class="nav-link active" aria-current="page">
+                        <a href="home.html" class="nav-link text-white">
                             Главная
                         </a>
                     </li>
                     <li>
-                        <a href="category.html" class="nav-link text-white">
+                        <a href="category.html" class="nav-link active" aria-current="page">
                             Категории
                         </a>
                     </li>
@@ -57,15 +57,12 @@
     <div class="col-8">
         <section class="py-5 text-center container">
             <div class="row py-lg-5">
-                <div class="col-lg col-md-8 mx-auto">
-                    <h1 class="fw-light">ГЛАВНАЯ</h1>
-                    <p class="lead text-body-secondary">
-                        Вы находитесь на сайте, предназначеном для продажи товаров
-                    </p>
+                <div class="col-lg-6 col-md-8 mx-auto">
+                    <h1 class="fw-light">Категория 1</h1>
                 </div>
             </div>
         </section>
-        <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+        <div class="row row-cols-1 row-cols-md-3 mb-6 text-center">
             <div class="col">
                 <div class="card mb-4 rounded-3 shadow-sm">
                     <div class="card-header py-3">
@@ -78,8 +75,10 @@
                             $100
                         </h1>
                         <ul class="list-unstyled mt-3 mb-4">
-                            <li>10 users included, 2 GB of storage,</li>
-                            <li>Email support, Help center access</li>
+                            <li>10 users included</li>
+                            <li>2 GB of storage</li>
+                            <li>Email support</li>
+                            <li>Help center access</li>
                         </ul>
                         <button type="button" class="w-100 btn btn-lg btn-outline-primary">
                             Купить
@@ -99,8 +98,10 @@
                             $100
                         </h1>
                         <ul class="list-unstyled mt-3 mb-4">
-                            <li>10 users included, 2 GB of storage,</li>
-                            <li>Email support, Help center access</li>
+                            <li>10 users included</li>
+                            <li>2 GB of storage</li>
+                            <li>Email support</li>
+                            <li>Help center access</li>
                         </ul>
                         <button type="button" class="w-100 btn btn-lg btn-outline-primary">
                             Купить
@@ -120,8 +121,79 @@
                             $100
                         </h1>
                         <ul class="list-unstyled mt-3 mb-4">
-                            <li>10 users included, 2 GB of storage,</li>
-                            <li>Email support, Help center access</li>
+                            <li>10 users included</li>
+                            <li>2 GB of storage</li>
+                            <li>Email support</li>
+                            <li>Help center access</li>
+                        </ul>
+                        <button type="button" class="w-100 btn btn-lg btn-outline-primary">
+                            Купить
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mb-4 rounded-3 shadow-sm">
+                    <div class="card-header py-3">
+                        <h4 class="my-0 fw-normal">
+                            Товар 1
+                        </h4>
+                    </div>
+                    <div class="card-body">
+                        <h1 class="card-title pricing-card-title">
+                            $100
+                        </h1>
+                        <ul class="list-unstyled mt-3 mb-4">
+                            <li>10 users included</li>
+                            <li>2 GB of storage</li>
+                            <li>Email support</li>
+                            <li>Help center access</li>
+                        </ul>
+                        <button type="button" class="w-100 btn btn-lg btn-outline-primary">
+                            Купить
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mb-4 rounded-3 shadow-sm">
+                    <div class="card-header py-3">
+                        <h4 class="my-0 fw-normal">
+                            Товар 1
+                        </h4>
+                    </div>
+                    <div class="card-body">
+                        <h1 class="card-title pricing-card-title">
+                            $100
+                        </h1>
+                        <ul class="list-unstyled mt-3 mb-4">
+                            <li>10 users included</li>
+                            <li>2 GB of storage</li>
+                            <li>Email support</li>
+                            <li>Help center access</li>
+                        </ul>
+                        <button type="button" class="w-100 btn btn-lg btn-outline-primary">
+                            Купить
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mb-4 rounded-3 shadow-sm">
+                    <div class="card-header py-3">
+                        <h4 class="my-0 fw-normal">
+                            Товар 1
+                        </h4>
+                    </div>
+                    <div class="card-body">
+                        <h1 class="card-title pricing-card-title">
+                            $100
+                        </h1>
+                        <ul class="list-unstyled mt-3 mb-4">
+                            <li>10 users included</li>
+                            <li>2 GB of storage</li>
+                            <li>Email support</li>
+                            <li>Help center access</li>
                         </ul>
                         <button type="button" class="w-100 btn btn-lg btn-outline-primary">
                             Купить
