--- a/contact_us.html
+++ b/contact_us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +13,7 @@
 <div class="row">
     <div class="col-2">
         <div class="row row-cols-1">
-            <div class="d-flex flex-column p-3 text-bg-dark" style="width: 280px; height: 100vh;">
+            <div class="d-flex flex-column p-3 text-bg-dark" style="width: 280px; height: 150vh;">
                 <a class="d-flex align-items-center mb-mb-md-0 text-white">
                     <h5>Меню</h5>
                 </a>
