--- a/home.html
+++ b/home.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Каталог</title>
-    <link href="catalog.html"/>
-    <link href="css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="home.html"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js" integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK" crossorigin="anonymous"></script>
 </head>
@@ -13,7 +13,7 @@
 <div class="row">
     <div class="col-2">
         <div class="row row-cols-1">
-            <div class="d-flex flex-column p-3 text-bg-dark" style="width: 280px; height: 100vh;">
+            <div class="d-flex flex-column p-3 text-bg-dark" style="width: 280px; height: 150vh;">
                 <a class="d-flex align-items-center mb-mb-md-0 text-white">
                     <h5>Меню</h5>
                 </a>
